# vins_gnc

./: .gitignore  CMakeLists.txt  README.md
camera_models/: CMakeLists.txt
camera_models/src/chessboard/: Chessboard.cc
config/: vins_rviz_config.rviz
config/viode/: calibration_mono.yaml  calibration_stereo.yaml
docker/ubuntu/: Dockerfile  docker_build.sh  docker_run.sh  vins_env.yml
scripts/: semantic_segmentation_node.py
vins_estimator/: CMakeLists.txt  package.xml
vins_estimator/cmake/: FindEigen.cmake
vins_estimator/launch/: viode_vio.launch
vins_estimator/src/: rosNodeTest.cpp
vins_estimator/src/estimator/: estimator.cpp  estimator.h  feature_manager.cpp  feature_manager.h  parameters.cpp  parameters.h  surrogate_loss.cpp  surrogate_loss.h
vins_estimator/src/factor/: altProjectionTwoFrameOneCamFactor.cpp  altProjectionTwoFrameOneCamFactor.h  altProjectionTwoFrameTwoCamFactor.cpp  altProjectionTwoFrameTwoCamFactor.h  altSimpleReprojectionTwoFrameOneCamFactor.cpp  altSimpleReprojectionTwoFrameOneCamFactor.h  altSimpleReprojectionTwoFrameTwoCamFactor.cpp  altSimpleReprojectionTwoFrameTwoCamFactor.h  imu_factor.h  initial_bias_factor.h  initial_pose_factor.h  integration_base.h  marginalization_factor.cpp  marginalization_factor.h  orientation_local_parameterization.cpp  orientation_local_parameterization.h  orientation_subset_parameterization.cpp  orientation_subset_parameterization.h  origin_plane_factor.h  plane_factor.h  pose_local_parameterization.cpp  pose_local_parameterization.h  pose_subset_parameterization.cpp  pose_subset_parameterization.h  projectionOneFrameTwoCamFactor.cpp  projectionOneFrameTwoCamFactor.h  projectionTwoFrameOneCamFactor.cpp  projectionTwoFrameOneCamFactor.h  projectionTwoFrameTwoCamFactor.cpp  projectionTwoFrameTwoCamFactor.h  projection_factor.cpp  projection_factor.h  regularization_factor.h  simpleReprojectionTwoFrameOneCamFactor.cpp  simpleReprojectionTwoFrameOneCamFactor.h  simpleReprojectionTwoFrameTwoCamFactor.cpp  simpleReprojectionTwoFrameTwoCamFactor.h  wheel_factor.h  wheel_integration_base.h
vins_estimator/src/featureTracker/: feature_tracker.cpp  feature_tracker.h
vins_estimator/src/initial/: initial_aligment.cpp  initial_alignment.h  initial_ex_rotation.cpp  initial_ex_rotation.h  initial_sfm.cpp  initial_sfm.h  solve_5pts.cpp  solve_5pts.h
vins_estimator/src/reliability_model/: reliability_model.cpp  reliability_model.h
vins_estimator/src/tool/: bagwriter.cpp
vins_estimator/src/utility/: CameraPoseVisualization.cpp  assert.h  sophus_utils.hpp  utility.cpp  utility.h  visualization.cpp  visualization.h
